Fix layout issues

--- a/styles.scss
+++ b/styles.scss
@@ -90,7 +90,7 @@ aside {
 }
 
 article {
-    background: #9fc5f8;
+    background: #a2c4c9;
     border: 3px solid #000;
     margin: 5px;
     padding: 15px;
@@ -202,7 +202,7 @@ aside {
 }
 
 #article1 {
-    background: #9fc5f8;
+    background: #a2c4c9;
     border: 3px solid #000;
     margin: 5px;
     padding: 15px;
@@ -211,7 +211,7 @@ aside {
 }
 
 #article2 {
-    background: #9fc5f8;
+    background: #a2c4c9;
     border: 3px solid #000;
     margin: 5px;
     padding: 15px;
@@ -220,7 +220,7 @@ aside {
 }
 
 #article3 {
-    background: #9fc5f8;
+    background: #a2c4c9;
     border: 3px solid #000;
     margin: 5px;
     padding: 15px;
@@ -230,11 +230,11 @@ aside {
 
 footer {
     background: #9fc5f8;
-    border: 3px solid #000;
+    border-top: 3px solid #000;
+    border-bottom: 3px solid #000;
     margin: 5px;
-    padding: 10px;
-    border-radius: 20px;
-    width: 99%;
+    padding: 15px;
+    width: 100%;
 
 }
 
@@ -301,7 +301,7 @@ aside {
 }
 
 article {
-    background: #9fc5f8;
+    background: #a2c4c9;
     border: 1px solid #000;
     margin: 5px;
     padding: 15px;
@@ -310,11 +310,11 @@ article {
 
 footer {
     background: #9fc5f8;
-    border: 1px solid #000;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
     margin: 5px;
-    padding: 5px;
-    border-radius: 10px;
-    width: 98%;
+    padding: 15px;
+    width: 100%;
 
 }
 
